cluster/apps/dcts/dcts/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: dcts
    app.kubernetes.io/version: 1.6.4.4
  name: dcts
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dcts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dcts
        app.kubernetes.io/version: 1.6.4.4
    spec:
      containers:
      - image: ghcr.io/hackthedev/dcts-shipping:1.6.4.4
        name: dcts
        ports:
        - containerPort: 2052
          name: http
        volumeMounts:
        - mountPath: /app/sv
          name: app-sv-volume
        - mountPath: /app/configs
          name: app-configs-volume
        - mountPath: /app/public/uploads
          name: app-uploads-volume
        - mountPath: /app/public/emojis
          name: app-emojis-volume
        - mountPath: /app/plugins
          name: app-plugins-volume
        - mountPath: /app/themes
          name: app-themes-volume
        - mountPath: /app/livekit/livekit.yaml
          subPath: livekit.yaml
          name: livekit-volume
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: app-sv-volume
        persistentVolumeClaim:
          claimName: dcts-app-sv
      - name: app-configs-volume
        persistentVolumeClaim:
          claimName: dcts-app-configs
      - name: app-uploads-volume
        persistentVolumeClaim:
          claimName: dcts-app-uploads
      - name: app-emojis-volume
        persistentVolumeClaim:
          claimName: dcts-app-emojis
      - name: app-plugins-volume
        persistentVolumeClaim:
          claimName: dcts-app-plugins
      - name: app-themes-volume
        persistentVolumeClaim:
          claimName: dcts-app-themes
      - name: livekit-volume
        secret:
          secretName: livekit-secret
          defaultMode: 420
      securityContext:
        fsGroup: 1000
