cluster/apps/dcts/dcts/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dcts
    app.kubernetes.io/version: 1.8.2.3.1
  name: dcts
spec:
  selector:
    app.kubernetes.io/name: dcts
  ports:
  - name: http-dcts
    port: 2052
    targetPort: 2052
