cluster/apps/dcts/dcts/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dcts-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dcts
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netbird
      podSelector:
        matchLabels:
          app.kubernetes.io/name: networkrouter
    ports:
    - port: 2052
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 100.87.188.103/32
  - to: []
    ports:
    - port: 443
      protocol: TCP
  - to: []
    ports:
    - port: 3306
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: livekit
    ports:
    - port: 7880
      protocol: TCP
